# genpass_rust

./: Cargo.toml  LICENSE  README.md
src/: config.rs  generator.rs  lib.rs  main.rs
