[package]
name = "genpass"
version = "0.1.1"
edition = "2021"
authors = ["Crow16384 <crow16384@yandex.ru>"]
description = "Human readable password generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
rand = "0.8.5"
thiserror = "1.0.50"

[profile.release]
opt-level = 'z'
lto = true
debug = false
debug-assertions = false
codegen-units = 1